Batch Monitoring/src/objects/BulkAPIJobBatches__c.object
<CustomObject>
    <description>This object stores all the batch details of Bulk API Jobs.</description>
    <fields>
        <fullName>APIActiveProcessingTime__c</fullName>
        <label>APIActiveProcessingTime</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApexProcessingTime__c</fullName>
        <label>ApexProcessingTime</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BulkAPIJob_ID__c</fullName>
        <label>BulkAPIJob ID</label>
        <referenceTo>BulkAPIJob__c</referenceTo>
        <relationshipLabel>BulkAPIJobBatches</relationshipLabel>
        <relationshipName>BulkAPIJobBatches</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobId__c</fullName>
        <label>JobId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfRecordsFailed__c</fullName>
        <label>NumberOfRecordsFailed</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfRecordsProcessed__c</fullName>
        <label>NumberOfRecordsProcessed</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <label>SystemModstamp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalProcessingTime__c</fullName>
        <label>TotalProcessingTime</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>BulkAPIJobBatches</label>
    <nameField>
        <label>BulkAPIJobBatches Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BulkAPIJobBatches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>